[package]
name = "confik"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"

[dependencies.confik_derive]
version = "0.1"
path = "confik_derive"

[workspace]
members = ["confik_derive"]
resolver = "3"
