[package]
name = "konfik"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"

[dependencies.konfik_derive]
version = "0.1"
path = "konfik_derive"

[workspace]
members = ["konfik_derive"]
resolver = "3"
