[package]
name = "konfik"
version = "0.1.2"
edition = "2024"
description = "config parser"
license-file = "LICENSE"
repository = "https://github.com/Crypts-of-the-lost/konfik"
readme = "README.md"
keywords = ["configuration", "cli", "validation", "file", "environment"]
categories = ["config"]

include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "banner.svg"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"
clap.workspace = true

[dependencies.konfik_derive]
version = "0.1"
path = "konfik_derive"

[lints]
workspace = true

# Workspace
[workspace.dependencies]
clap = { version = "4.5.45", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = ["konfik_derive"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unused_must_use = "deny"
unreachable_patterns = "warn"

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
allow_attributes = { level = "deny", priority = 1 }
correctness = "deny"
nursery = "deny"
suspicious = "deny"
complexity = "deny"
style = "deny"
needless_pass_by_value = { level = "allow", priority = 1 }
perf = "deny"
cargo = "deny"
pedantic = "warn"
dbg_macro = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
