[package]
name = "konfik_derive"
version = "0.1.0"
edition = "2024"
description = "config parser"
license-file = "LICENSE"
license = "MIT"
repository = "https://github.com/kingananas20/konfik"
readme = "README.md"
keywords = ["config"]
categories = ["configuration"]

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true
